--- a/dashboard/fr/faq.html
+++ b/dashboard/fr/faq.html
@@ -106,7 +106,7 @@
       <p><code>http://localhost</code></p>
 
       <p>You should see the XAMPP start page, as shown below.</p>
-        <img src="/dashboard/images/screenshots/xampp-macosx-start.jpg" />    
+        <img src="/dashboard/images/screenshots/xampp-macosx-start.jpg" alt="" />    
       </dd>
       <dt>XAMPP destiné à la production?</dt>
       <dd><p>XAMPP est destiné exclusivement aux développeurs. La manière dont XAMPP est configuré donne un maximum de libertés en cours de développement. Ceci permet de gagner du temps en phase de développement, mais peut être fatal en environnement de production.</p>
@@ -339,7 +339,7 @@ You may need to restart XAMPP to complete the restore.</br>
             <li><a href="/privacy_policy.html">Politique de confidentialité</a></li>
             <li>
 <a target="_blank" href="http://www.fastly.com/">                CDN fourni par
-                <img width="48" data-2x="/dashboard/images/fastly-logo@2x.png" src="/dashboard/images/fastly-logo.png" />
+                <img width="48" data-2x="/dashboard/images/fastly-logo@2x.png" src="/dashboard/images/fastly-logo.png" alt="" />
 </a>            </li>
           </ul>
         </div>
